Fix-ENG-141-Update-Visible-Items

--- a/src/modules/base/avatar/avatar.css
+++ b/src/modules/base/avatar/avatar.css
@@ -48,6 +48,6 @@
     --avonni-chip-container-color-border: transparent;
 }
 
-.avonni-avatar__media-object-width-100 {
-    --avonni-media-object-width: 100%;
+.avonni-avatar__media-object_width-100 {
+    --avonni-media-object-sizing-width: 100%;
 }
